--- a/task-management-system/docker-compose.yml
+++ b/task-management-system/docker-compose.yml
@@ -16,14 +16,18 @@ services:
     volumes:
       - ./django_backend:/django_backend
     environment:
-      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_HOST=database_postgres
       - POSTGRES_PORT=${POSTGRES_PORT}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB_NAME}
       - DJANGO_PORT=${DJANGO_PORT}
+      - DJANGO_SUPERUSER_USERNAME=${DJANGO_SUPERUSER_USERNAME}
+      - DJANGO_SUPERUSER_EMAIL=${DJANGO_SUPERUSER_EMAIL}
+      - DJANGO_SUPERUSER_PASSWORD=${DJANGO_SUPERUSER_PASSWORD}
 
-  ${POSTGRES_HOST}:
+
+  database_postgres:
     container_name: database_postgres
     env_file: 
       - .env.sample
@@ -35,7 +39,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_HOST=database_postgres
       - POSTGRES_PORT=${POSTGRES_PORT}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
