healthcheck Feature && Updated ENV vars

--- a/task-management-system/.env.sample
+++ b/task-management-system/.env.sample
@@ -6,6 +6,20 @@ POSTGRES_PORT=1234
 
 # Variables Django
 DJANGO_PORT=7777
+DJANGO_DEBUG=True
+JANGO_SECRET_KEY='django-insecure-^%q2ynu)(+-^%pj@^yo&zo76=aog#e$=62e*dej_y^%9@4u=))'
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+
+# Django Superuser
 DJANGO_SUPERUSER_USERNAME=lol
+DJANGO_SUPERUSER_EMAIL=lol@lol.com
 DJANGO_SUPERUSER_PASSWORD=lol
-DJANGO_SUPERUSER_EMAIL=lol@lol.lol
+
+# # Logging Configuration
+# LOG_LEVEL=INFO
+# LOG_FORMAT=json
+
+# # Health Check Configuration
+# HEALTH_CHECK_TIMEOUT=30
+# HEALTH_CHECK_INTERVAL=60
+# HEALTH_CHECK_RETRIES=3
