--- a/task-management-system/docker-compose.yml
+++ b/task-management-system/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     networks:
       - backend_network
     depends_on:
-      - database_postgres
+      database_postgres:
+        condition: service_healthy
     volumes:
       - ./django_backend:/django_backend
     environment:
@@ -25,6 +26,13 @@ services:
       - DJANGO_SUPERUSER_USERNAME=${DJANGO_SUPERUSER_USERNAME}
       - DJANGO_SUPERUSER_EMAIL=${DJANGO_SUPERUSER_EMAIL}
       - DJANGO_SUPERUSER_PASSWORD=${DJANGO_SUPERUSER_PASSWORD}
+    healthcheck:
+      test: ["CMD-SHELL", "python3 manage.py check api"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
 
 
   database_postgres:
@@ -44,6 +52,12 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB_NAME}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB_NAME}"]
+      interval: 60s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
 volumes:
   postgres_data:
